--- a/tp2/index.html
+++ b/tp2/index.html
@@ -41,7 +41,7 @@
                     
                 </li> 
                 <ul class="menu-link">
-                    <!-- <li class="nav-link ">
+                    <li class="nav-link ">
                         <a href="#">
                             <i class='bx bx-home-alt-2 icons'></i>
                             <span class="text">Dashbord</span>
@@ -82,26 +82,11 @@
                             <i class='bx bx-table icons'></i>
                             <span class="text">Table</span>
                         </a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
             <div class="content-bottom">
-                <li class="">
-                    <a href="#">
-                        <i class='bx bx-log-out icons'></i>
-                        <span class="text">Log-out</span>
-                    </a>
-                </li>
-                <li class="mode">
-                    <div class="moon-sun">
-                        <i class='bx bx-moon icons moon'></i>
-                        <i class='bx bx-sun icons sun'></i>
-                    </div>
-                    <span class="mode-text text">Mode</span>
-                    <div class="toggle-switch">
-                        <span class="switch text"></span>
-                    </div>
-                </li>
+               Exemple
             </div>
         </div>
     </nav>
