--- a/Projet trello js/index.html
+++ b/Projet trello js/index.html
@@ -42,13 +42,18 @@
                         <span></span>
                     </div>
                     <div class="date">
-                        <label for="date">Date</label>
+                        <label for="date">Date de début</label>
                         <input type="date" name="date" id="date" class="task-setting">
                         <span></span>
                     </div>
                     <div class="start">
                         <label for="start-time">Heure de début</label>
                         <input type="time" name="start-time" id="start-time" class="task-setting">
+                        <span></span>
+                    </div>
+                    <div class="date_end">
+                        <label for="date">Date de fin</label>
+                        <input type="date" name="date" id="date_end" class="task-setting">
                         <span></span>
                     </div>
                     <div class="end">
